<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Show Me Hills</string>
    <string name="preferences">Preferences</string>
    <string name="title_distance_preference">Max distance (km)</string>
    <string name="summary_distance_preference">Furthest displayed hills</string>
    <string name="title_mindistance_preference">Min distance (km)</string>
    <string name="summary_mindistance_preference">Nearest displayed hills</string>
    <string name="title_textsize_preference">Text size</string>
    <string name="summary_textsize_preference"></string>
    <string name="title_showdist_preference">Show distance</string>
    <string name="summary_showdist_preference"></string>
    <string name="title_showdir_preference">Show bearing</string>
    <string name="summary_showdir_preference"></string>
    <string name="title_showalt_preference">Show height</string>
    <string name="summary_showalt_preference"></string>
	<string name="title_distunit_preference">Units</string>
    <string name="summary_distunit_preference">Kilometers or miles</string>
    <string name="title_compass_smoothing">Compass filter</string>
    <string name="summary_compass_smoothing">Number of readings averaged</string>
    <string name="pref_disable_acra">Disable crash reports</string>
    <string name="pref_acra_disabled">Disabled</string>
    <string name="pref_acra_enabled">Currently enabled</string>
</resources>
